--- a/Window/FinalQuestionPage.xaml
+++ b/Window/FinalQuestionPage.xaml
@@ -8,17 +8,54 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-        <StackPanel Padding="20">
-            <TextBlock x:Name="TitleTextBlock"
-                   FontSize="24"
-                   FontWeight="Bold"
-                   TextWrapping="Wrap"/>
-            <TextBlock x:Name="BodyTextBlock"
-                   Margin="0,10,0,20"
-                   FontSize="18"
-                   TextWrapping="Wrap"/>
-            <StackPanel x:Name="AnswerList"/>
-        </StackPanel>
-    </Grid>
+	<Grid>
+    <StackPanel Padding="20"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            MaxWidth="800"
+            MinWidth="600"
+            Spacing="10">
+
+        <!-- Tiêu đề câu hỏi -->
+        <TextBlock x:Name="TitleTextBlock"
+               FontSize="24"
+               FontWeight="Bold"
+               Foreground="White"
+               TextAlignment="Left"
+               Margin="0"/>
+
+        <!-- Nội dung câu hỏi -->
+        <TextBlock x:Name="BodyTextBlock"
+               FontSize="18"
+               Foreground="White"
+               TextWrapping="Wrap"
+               TextAlignment="Left"
+               Margin="100,0,0,0"/>
+
+        <!-- Danh sách đáp án -->
+        <ItemsControl x:Name="AnswerList">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Center"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding Text}"
+                        Tag="{Binding IsCorrect}"
+                        Click="AnswerButtonClick"
+                        Height="40"
+                        Margin="20 5 20 5"
+                        FontSize="16"
+                        MinWidth="80"
+                        Background="LightGray"
+                        CornerRadius="8"
+                        HorizontalAlignment="Center"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </StackPanel>
+</Grid>
 </Page>
