--- a/Window/FirstQuestionPage.xaml
+++ b/Window/FirstQuestionPage.xaml
@@ -82,7 +82,7 @@
                                 Height="40"
                                 Margin="5"
                                 FontSize="16"
-                                Background="LightGray"
+                                Background="#1E1E1E"
                                 CornerRadius="8"
                                 HorizontalAlignment="Center"/>
                     </DataTemplate>
