--- a/Window/SecondQuestionPage.xaml
+++ b/Window/SecondQuestionPage.xaml
@@ -81,7 +81,7 @@
                             Height="40"
                             Margin="20 5 20 5"
                             FontSize="16"
-                            Background="LightGray"
+                            Background="#1E1E1E"
                             CornerRadius="8"
                             HorizontalAlignment="Center"/>
                     </DataTemplate>
