--- a/Window/FirstQuestionPage.xaml
+++ b/Window/FirstQuestionPage.xaml
@@ -58,10 +58,10 @@
                     Width="800"
                     IsHitTestVisible="False">
                 <TextBlock x:Name="BodyTextBlock"
-                           FontSize="24"
+                           FontSize="20"
                            Foreground="White"
                            TextWrapping="Wrap"
-                           Width="750"
+                           Width="740"
                            TextTrimming="CharacterEllipsis"/>
             </Button>
 
@@ -92,7 +92,8 @@
                                 Click="AnswerButtonClick"
                                 Height="40"
                                 FontSize="16"
-                                Background="#1E1E1E"
+                                Background="#AA000000"
+                                Foreground="White"
                                 CornerRadius="8"
                                 HorizontalAlignment="Center"/>
                     </DataTemplate>
