--- a/Window/FinalQuestionPage.xaml
+++ b/Window/FinalQuestionPage.xaml
@@ -56,7 +56,7 @@
                     Width="800"
                     IsHitTestVisible="False">
                 <TextBlock x:Name="BodyTextBlock"
-                           FontSize="24"
+                           FontSize="20"
                            Foreground="White"
                            TextWrapping="Wrap"
                            Width="750"
@@ -104,7 +104,8 @@
                             Margin="20 5 20 5"
                             FontSize="16"
                             MinWidth="80"
-                            Background="#1E1E1E"
+                            Background="#AA000000"
+                            Foreground="White"
                             CornerRadius="8"
                             HorizontalAlignment="Center"/>
                 </DataTemplate>
