update size button answer

--- a/Window/FirstQuestionPage.xaml
+++ b/Window/FirstQuestionPage.xaml
@@ -90,8 +90,9 @@
                         <Button Content="{Binding Text}"
                                 Tag="{Binding IsCorrect}"
                                 Click="AnswerButtonClick"
-                                Height="40"
-                                FontSize="16"
+                                Width="250"
+                                Height="50"
+                                FontSize="20"
                                 Background="#AA000000"
                                 Foreground="White"
                                 CornerRadius="8"
