--- a/Window/FinalQuestionPage.xaml
+++ b/Window/FinalQuestionPage.xaml
@@ -100,9 +100,10 @@
                     <Button Content="{Binding Text}"
                             Tag="{Binding IsCorrect}"
                             Click="AnswerButtonClick"
-                            Height="40"
-                            Margin="20 5 20 5"
-                            FontSize="16"
+                            Width="230"
+                            Height="50"
+                            Margin="10 5 10 5"
+                            FontSize="20"
                             MinWidth="80"
                             Background="#AA000000"
                             Foreground="White"
