--- a/Window/SecondQuestionPage.xaml
+++ b/Window/SecondQuestionPage.xaml
@@ -94,9 +94,10 @@
                         <Button Content="{Binding Text}"
                             Tag="{Binding IsCorrect}"
                             Click="AnswerButtonClick"
-                            Height="40"
-                            Margin="20 5 20 5"
-                            FontSize="16"
+                            Width="230"
+                            Height="50"
+                            Margin="10 5 10 5"
+                            FontSize="20"
                             Background="#AA000000"
                             Foreground="White"
                             CornerRadius="8"
